Images rendering on home page

--- a/src/main/webapp/home.html
+++ b/src/main/webapp/home.html
@@ -38,24 +38,27 @@
 				<a href="/Register">Register</a>
 			</section>
 			<section id="About">
-				<img id="chanel" src="chanelchance.jpg">
+				<img id="chanel" src="./images/chanelchance.jpg">
 				<h2>About Perfect Perfumes</h2>
 				<p>Established in 2012, Perfect Perfumes is the UK’s largest
 					independent, fragrance retailer.</p>
 
 				<p>Our aim is to make mainstream and luxury fragrance affordable
 					and accessible.</p>
-				
 			</section>
-		<img src="fantasia.jpg"> <img src="marcjacobsdaisy.jpg"> <img
-			src="bombshellvictoriassecret.jpg"> <img src="chanelchance.jpg">
-		<img src="cocomademoiselle.jpg"> <img
-			src="blacklslexces pacorabanne.jpg"> <img src="jadoredior.jpg">
-		<img src="missdior.jpg"> <img src="no5.jpg"> <img
-			src="opium.jpg"> <img src="gucci.jpg"> <img
-			src="versace.jpg">
+		<img src="./images/fantasia.jpg"> 
+		<img src="./images/marcjacobsdaisy.jpg"> 
+		<img src="./images/bombshellvictoriassecret.jpg"> 
+		<img src="./images/chanelchance.jpg">
+		<img src="./images/cocomademoiselle.jpg"> 
+		<img src="./images/blacklslexces pacorabanne.jpg"> 
+		<img src="./images/jadoredior.jpg">
+		<img src="./images/missdior.jpg"> 
+		<img src="./images/no5.jpg"> 
+		<img src="./images/opium.jpg"> 
+		<img src="./images/gucci.jpg"> 
+		<img src="./images/versace.jpg">
 		<div class="leftColumn"></div>
-	</div>
 	<section id="Contact us">
 		<h2>Contact Us</h2>
 		<p>Phone number: 0208 9876 235333</p>
